--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -2,7 +2,7 @@
 {% block title %}Blog{% endblock %}
 {% load static %}
 {% block content %}
-    {% for post in posts %}
+    {% for post in category.get_posts.all %}
         <section class="page-section cta">
           <div class="container">
             <div class="row">
