--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -123,9 +123,9 @@
 	        </a>
 	    </p>
         <p class="m-0 mbt">
-        	<a href="sample.html" class="link">Política de privacidad</a> ·
-        	<a href="sample.html" class="link">Aviso legal</a> ·
-        	<a href="sample.html" class="link">Cookies</a>
+        	<a href="../../../pages/templates/pages/sample.html" class="link">Política de privacidad</a> ·
+        	<a href="../../../pages/templates/pages/sample.html" class="link">Aviso legal</a> ·
+        	<a href="../../../pages/templates/pages/sample.html" class="link">Cookies</a>
 		</p>
         <p class="m-0 mbt1">&copy; La Caffettiera 2018</p>
       </div>
