--- a/pages/templates/pages/sample.html
+++ b/pages/templates/pages/sample.html
@@ -11,7 +11,11 @@
                   <span class="section-heading-lower">{{ page.title }}</span>
                 </h2>
                 <div class="section-content">
-                    {{ page.content|linebreaks }}
+                    {{ page.content|safe }}
+                    <br>
+                    {% if user.is_authenticated %}
+                        <p><a href="{% url 'admin:pages_page_change' page.id %}">Editar</a></p>
+                    {% endif %}
                 </div>
               </div>
             </div>
