--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -17,42 +17,48 @@
 {% endblock %}
 {% block content %}
                 <!-- Formulario de contacto -->
-    <!--
-                <form>
+
+                    {% if 'ok' in request.GET %}
+                        <p><b>Su mensaje fue enviado en breve nos pondremos en contacto con usted</b></p>
+                    {% endif %}
+                    {% if 'fail' in request.GET %}
+                        <p><b>Ocurrio un error intentalo de nuevo mas tarde</b></p>
+                    {% endif %}
+                <form method="POSt" action="{% url 'contact' %}">
+                    {% csrf_token %}
                     <div class="form-group">
                         <label>Nombre *</label>
                         <div class="input-group">
-                            <input type="text" class="form-control">
+                            {{ contact.name }}
                         </div>
+                        <ul class="errorlist">
+                            {{ contact.name.errors }}
+                        </ul>
                     </div>
                     <div class="form-group">
                         <label>Email *</label>
                         <div class="input-group">
-                            <input type="text" class="form-control">
+                            {{ contact.email }}
                         </div>
                         <ul class="errorlist">
-                            <li>El email no es correcto.</li>
+                            {{ contact.email.errors }}
                         </ul>
                     </div>
                     <div class="form-group">
                         <label>Mensaje *</label>
                         <div class="input-group">
-                            <textarea class="form-control"></textarea>
+                            {{ contact.content }}
                         </div>
+                        <ul class="errorlist">
+                            {{ contact.content.errors }}
+                        </ul>
                     </div>
                     <div class="text-center">
                         <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
                     </div>
                 </form>
                 <!-- Fin formulario de contacto -->
-                <form action="" method="POST">
-                {% csrf_token %}
-                    <table>
-                        {{ contact.as_table}}
-                    </table>
-                    <input type="submit" value="Enviar">
-                </form>
-              </div>
+                </div>
             </div>
           </div>
         </div>
